<resources>
    <string name="app_name">TodoApp</string>
    <string name="monthly_plans">Monthly Plans</string>
    <string name="calender">Calender</string>
    <string name="new_task">New Task</string>
    <string name="month_task">Create Month task</string>
    <string name="nick_name">Give Nick Name To Month</string>
    <string name="add_task">Add Task</string>
    <string name="create_task">Create Task</string>
    <string name="Hello">hello</string>
    <string name="hello">Hello</string>
    <string name="nickName">Nick Name</string>
    <string name="task">Task</string>
    <string name="update_task">Update Month Task</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>