<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/month_task"
        android:textColor="@drawable/radius_border_button_text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/add_task"
        android:textColor="@drawable/radius_border_button_text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/input_nick_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/nick_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_marginLeft="10dp"
        android:onClick="chooseDate"
        android:text="Set Month"
        android:textColor="@drawable/radius_border_button_text"
        android:textSize="16dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/task_create"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/radius_border_button"
        android:paddingHorizontal="70dp"
        android:paddingVertical="15dp"
        android:text="@string/create_task"
        android:textColor="@drawable/radius_border_button_text" />

</LinearLayout>