<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".update_task">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_task"
        android:textColor="@drawable/radius_border_button_text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/test_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:editable="false"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/updt_nick_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:ems="10"
        android:hint="@string/nickName"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="Set Month"
        android:textColor="@drawable/radius_border_button_text"
        android:textSize="16dp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/update_task"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/radius_border_button"
        android:paddingHorizontal="70dp"
        android:paddingVertical="15dp"
        android:text="@string/update"
        android:textColor="@drawable/radius_border_button_text" />

    <Button
        android:id="@+id/delete_task"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/radius_border_button"
        android:paddingHorizontal="70dp"
        android:paddingVertical="15dp"

        android:text="@string/delete"
        android:textColor="@drawable/radius_border_button_text" />

</LinearLayout>